--- a/index.html
+++ b/index.html
@@ -454,7 +454,7 @@
                             <img src="images/blauwe_licht_aan.JPG" height="50%" width="50%">
                             <p class="mt-3 vet">Scherm met een blauwe licht filter: </p>
                             <img src="images/blauwe_licht_af.JPG" width="50%" height="50%">
-                            <p class="mt-3 vet">Ten slotte is er ook een technologie genaamd "trillingsvrije technologie". Dit kan ervoor gaan zorgen dat kleine trillingen in het scherm beperkt zullen worden waardoor je minder snel klachten zult gaan krijgen. Er kan dus geopteerd worden voor een combinatie van beide technologieën!</p>
+                            <p class="mt-3">Ten slotte is er ook een technologie genaamd "trillingsvrije technologie". Dit kan ervoor gaan zorgen dat kleine trillingen in het scherm beperkt zullen worden waardoor je minder snel klachten zult gaan krijgen. Er kan dus geopteerd worden voor een combinatie van beide technologieën!</p>
                         </div>
                     </div>
                 </div>
