--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                 <div class="col-lg-3 d-flex mb-3"><img src="images/Robin.png" alt="Robin"></div>
                 <div class="col-lg-8 mr-auto mb-3">
                     <h3 class="tussentitel">Wie ben ik?</h3>
-                    <p class="lead">Ik ben Robin Swolfs. Ik ben 24 jaar en woon in Geel. Ik ben student aan de IT Factory, meer bepaald Cloud &amp; Cybersecurity, aan Thomas More Geel. Ik had al redelijk snel door tijdens de netwerk lessen dat deze richting mij lag. Deze keuze werd dan ook bevestigd toen ik begon deel te nemen aan CTF's. In mijn vrije tijd ben ik bezig met gamen, lezen, schrijven, geocachen en reizen! Ik heb ook al een opleiding sociaal werk achter de rug, die ik niet heb afgemaakt. Toch heb ik hier veel soft skills geleerd die handig zijn binnen de IT wereld.</p>
+                    <p class="lead">Ik ben Robin Swolfs. Ik ben 25 jaar en woon in Geel. Ik ben afgestudeerd aan de IT Factory, meer bepaald Cloud &amp; Cybersecurity, aan Thomas More Geel. Ik had al redelijk snel door tijdens de netwerk lessen dat deze richting mij lag. Deze keuze werd dan ook bevestigd toen ik begon deel te nemen aan CTF's. In mijn vrije tijd ben ik bezig met gamen, lezen, schrijven, geocachen en reizen! Ik heb ook al een opleiding sociaal werk achter de rug, die ik niet heb afgemaakt. Toch heb ik hier veel soft skills geleerd die handig zijn binnen de IT wereld. Ik heb ook een jaar gestudeerd aan de KU Leuven binnen het schakelprogramma "Industriële Wetenschappen: elo-ict" om een meer verdiepende blik te krijgen in de IT wereld.</p>
                 </div>
             </div>
             <hr>
